v1/api-reference/endpoints/get-collections.mdx
---
title: "Get Collections"
api: "POST https://api.getcatalog.ai/v1/collections"
description: "Get all collections for a vendor with pagination. Collections are ordered by product count."
---

<Tip>
**When to use:** Browse vendor collections before fetching products. Use with [`POST /v1/listings`](/v1/api-reference/endpoints/get-listings) to get products from specific collections.
</Tip>

## Request

<ParamField header="x-api-key" type="string" required>
  Your API key for authentication
</ParamField>

<ParamField body="vendor" type="string" required>
  The vendor/brand name to filter by
</ParamField>

<ParamField body="page" type="number" optional>
  Page number for pagination (minimum: 1)
</ParamField>

<ParamField body="page_size" type="number" optional>
  Number of collections per page (minimum: 1, maximum: 100, default: 10)
</ParamField>

## Response

<ResponseField name="collections" type="array">
  Array of collection objects
  
  <Expandable title="Collection Object">
    <ResponseField name="id" type="string">
      Unique identifier for the collection
    </ResponseField>
    
    <ResponseField name="url" type="string">
      Collection URL
    </ResponseField>
    
    <ResponseField name="products_total" type="number" optional>
      Total number of products in this collection
    </ResponseField>
    
    <ResponseField name="last_updated_by_catalog" type="string">
      ISO 8601 timestamp when the collection was last updated
    </ResponseField>
  </Expandable>
</ResponseField>

<ResponseField name="meta" type="object">
  Pagination metadata
  
  <Expandable title="Meta Object">
    <ResponseField name="total_items" type="number">
      Total number of collections matching the query
    </ResponseField>
    
    <ResponseField name="total_pages" type="number">
      Total number of pages available
    </ResponseField>
    
    <ResponseField name="current_page" type="number">
      Current page number
    </ResponseField>
    
    <ResponseField name="page_size" type="number">
      Number of items per page
    </ResponseField>
    
    <ResponseField name="has_next" type="boolean">
      Whether there is a next page
    </ResponseField>
    
    <ResponseField name="has_prev" type="boolean">
      Whether there is a previous page
    </ResponseField>
  </Expandable>
</ResponseField>

<RequestExample dropdown>

```powershell cURL
curl -X POST https://api.getcatalog.ai/v1/collections \
  -H "x-api-key: $CATALOG_API_KEY" \
  -H "Content-Type: application/json" \
  -d '{
    "vendor": "skims.com",
    "page": 1,
    "page_size": 5
  }'
```

```javascript JavaScript
const response = await fetch('https://api.getcatalog.ai/v1/collections', {
  method: 'POST',
  headers: {
    'x-api-key': 'YOUR_API_KEY',
    'Content-Type': 'application/json'
  },
  body: JSON.stringify({
    vendor: 'skims.com',
    page: 1,
    page_size: 5
  })
});

const data = await response.json();
console.log(`Found ${data.collections.length} collections`);
console.log(`Page ${data.meta.current_page} of ${data.meta.total_pages}`);
```

```python Python
import requests

response = requests.post(
    'https://api.getcatalog.ai/v1/collections',
    headers={'x-api-key': 'YOUR_API_KEY'},
    json={
        'vendor': 'skims.com',
        'page': 1,
        'page_size': 5
    }
)

data = response.json()
print(f"Found {len(data['collections'])} collections")
print(f"Page {data['meta']['current_page']} of {data['meta']['total_pages']}")
```

</RequestExample>

<ResponseExample>

```json Success Response
{
  "collections": [
    {
      "id": "db1a9fa8-4849-4209-bf13-14e4c176a96e",
      "url": "https://www.skims.com/collections/skims-sale",
      "products_total": 926,
      "last_updated_by_catalog": "2025-11-24T06:17:29.338+00:00"
    },
    {
      "id": "44be194a-eae7-4737-a8d1-963cb4ac5c35",
      "url": "https://www.skims.com/collections/fits-everybody",
      "products_total": 545,
      "last_updated_by_catalog": "2025-11-24T05:36:15.802+00:00"
    },
    {
      "id": "f7540f32-06ce-421b-b134-77d4b2b041b5",
      "url": "https://www.skims.com/collections/clothing",
      "products_total": 419,
      "last_updated_by_catalog": "2025-11-24T05:49:21.729+00:00"
    },
    {
      "id": "897be031-3f73-447d-bd56-5d1c49fef1b9",
      "url": "https://www.skims.com/collections/holiday-shop",
      "products_total": 366,
      "last_updated_by_catalog": "2025-11-24T06:23:03.296+00:00"
    },
    {
      "id": "7f882285-7376-4e92-874e-d35ead59a761",
      "url": "https://www.skims.com/collections/bra-panty-sets",
      "products_total": 346,
      "last_updated_by_catalog": "2025-11-24T05:39:37.42+00:00"
    }
  ],
  "meta": {
    "total_items": 274,
    "total_pages": 55,
    "current_page": 1,
    "page_size": 5,
    "has_next": true,
    "has_prev": false
  }
}
```

</ResponseExample>

